src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>ATL_Abut_Won_Lost_Status__c</fullName>
        <label>ATL Abut Won/Lost Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATL_ISUS_Won_Lost_Status__c</fullName>
        <label>ATL ISUS Won/Lost Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Academic_Title__c</fullName>
        <formula>IF(ISBLANK(ContactId),TEXT(Lead.AcademicTitle__c),TEXT(Contact.AcademicTitle__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Academic Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountLocalTime__c</fullName>
        <formula>If (NOT(ISBLANK(ContactId)),
Contact.Account.tz__Local_Time_Short__c,
Account.tz__Local_Time_Short__c)</formula>
        <label>Account Local Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountNewTab__c</fullName>
        <description>Open the account as a separate new browser tab.</description>
        <formula>IF(NOT(ISBLANK(ContactId)),
HYPERLINK(&apos;/&apos;+Account__r.Id, Account__r.Name , &quot;_blank&quot;),
HYPERLINK(&apos;/&apos;+Account.Id, Account.Name , &quot;_blank&quot;))</formula>
        <inlineHelpText>Open the account as a separate new browser tab.</inlineHelpText>
        <label>Account (New Tab)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Address__c</fullName>
        <formula>Account__r.ShippingStreet&amp;&quot; | &quot;&amp;  Account__r.ShippingCity &amp;&quot; | &quot;&amp; Account__r.ShippingState &amp;&quot; | &quot;&amp; Account__r.ShippingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>Contact.AccountId</formula>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_OneSF_Number__c</fullName>
        <formula>Account__r.OneSF_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account OneSF Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_State__c</fullName>
        <formula>Account__r.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Strategy_ATL_Abut__c</fullName>
        <description>Shows the Account Strategy for the Atlantis Abutments when the Campaign Member was added</description>
        <inlineHelpText>Shows the Account Strategy for the Atlantis Abutments when the Campaign Member was added</inlineHelpText>
        <label>Account Strategy (ATL Abut)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Strategy_ATL_ISUS__c</fullName>
        <label>Account Strategy (ATL ISUS)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Strategy_Implants__c</fullName>
        <description>Shows the Implant Account Strategy when the Campaign member was added</description>
        <inlineHelpText>Shows the Implant Account Strategy when the Campaign member was added</inlineHelpText>
        <label>Account Strategy (Implants)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Strategy_SIMPLANT__c</fullName>
        <label>Account Strategy (SIMPLANT)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Account to where the contact is related. This is usually the same as the Account to where the Contact is related, but can be edited to cater for Contacts other location</description>
        <inlineHelpText>The Account to where the contact is related. This is usually the same as the Account to where the Contact is related, but can be edited to cater for Contacts other location</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaign Members (Contacts of the Account)</relationshipLabel>
        <relationshipName>Campaign_Members2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Information_1_BNL__c</fullName>
        <description>A free text field used in Benelux to enter Campaign specific information about the member.</description>
        <inlineHelpText>Campaign specific information about the Campaign member.</inlineHelpText>
        <label>Additional Information 1 (BNL)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Information_2_BNL__c</fullName>
        <description>A free text field used in Benelux to enter Campaign specific information about the Campaign Member.</description>
        <inlineHelpText>A free text field for Campaign specific information about the Campaign Member.</inlineHelpText>
        <label>Additional Information 2 (BNL)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Information_3_BNL__c</fullName>
        <description>A free text field used in Benelux to enter Campaign specific information about the Campaign Member.</description>
        <inlineHelpText>A free text field for Campaign specific information about the Campaign Member.</inlineHelpText>
        <label>Additional Information 3 (BNL)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <description>Write Additional information. This information can appear on Mail Merge or E-mail Templates</description>
        <inlineHelpText>Write Additional information. This information can appear on Mail Merge or E-mail Templates</inlineHelpText>
        <label>Additional Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Airport__c</fullName>
        <label>Airport</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arrival_Flight__c</fullName>
        <label>Arrival Flight#</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arrival__c</fullName>
        <label>Arrival</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>3D Upgrade</fullName>
                </value>
                <value>
                    <fullName>ACB with ASA</fullName>
                </value>
                <value>
                    <fullName>AH Plus</fullName>
                </value>
                <value>
                    <fullName>AH Plus Bioceramic Sealer</fullName>
                </value>
                <value>
                    <fullName>AH Temp</fullName>
                </value>
                <value>
                    <fullName>AlginX</fullName>
                </value>
                <value>
                    <fullName>All Ceramics</fullName>
                </value>
                <value>
                    <fullName>All Other Endo</fullName>
                </value>
                <value>
                    <fullName>All Other - Niti Rotary Files</fullName>
                </value>
                <value>
                    <fullName>All Other – Obturation</fullName>
                </value>
                <value>
                    <fullName>Anaestadent</fullName>
                </value>
                <value>
                    <fullName>Ancillary</fullName>
                </value>
                <value>
                    <fullName>ANKYLOS</fullName>
                </value>
                <value>
                    <fullName>Apex Locator</fullName>
                </value>
                <value>
                    <fullName>Aquasil</fullName>
                </value>
                <value>
                    <fullName>Aquasil Ultra Plus</fullName>
                </value>
                <value>
                    <fullName>ATIS</fullName>
                </value>
                <value>
                    <fullName>ATIS EV</fullName>
                </value>
                <value>
                    <fullName>ATIS TX</fullName>
                </value>
                <value>
                    <fullName>Atlantis</fullName>
                </value>
                <value>
                    <fullName>Atlantis Abutments</fullName>
                </value>
                <value>
                    <fullName>Atlantis Suprastructures</fullName>
                </value>
                <value>
                    <fullName>Automate</fullName>
                </value>
                <value>
                    <fullName>Axano</fullName>
                </value>
                <value>
                    <fullName>Axeos</fullName>
                </value>
                <value>
                    <fullName>Azento Astra Tech</fullName>
                </value>
                <value>
                    <fullName>Azento EV</fullName>
                </value>
                <value>
                    <fullName>Azento XiVE</fullName>
                </value>
                <value>
                    <fullName>Bioceramic</fullName>
                </value>
                <value>
                    <fullName>Bioceramic Sealer</fullName>
                    <isActive>false</isActive>
                    <label>Bioceramic Sealer</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Breakfast__c</fullName>
        <label>Breakfast</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Breakfast Included</fullName>
                </value>
                <value>
                    <fullName>Breakfast Excluded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budgeted_Cost_Revenue__c</fullName>
        <description>This field shows the Budgeted cost-participation fee. This field can be used to analyze how much is spent on training to certain individuals or certain customers. The field is not exactly the same as the one on the Campaign</description>
        <formula>IF(  Campaign.RecordType.Id=&quot;01220000000ANcl&quot;  &amp;&amp;  ISPICKVAL( Status , &quot;Confirmed&quot;) , 
 CASE( Payment_By__c,
&quot;Dentsply Company&quot; , Campaign.Budgeted_Cost_Per_Participant__c, 
Campaign.Budgeted_Cost_Per_Participant__c - Total_Fee__c) , 
null)</formula>
        <inlineHelpText>This field shows the Budgeted cost-participation fee. This field can be used to analyze how much is spent on training to certain individuals or certain customers.</inlineHelpText>
        <label>Budgeted Cost-Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_Team_Member__c</fullName>
        <description>Checks if this Campaign Member is a Business Team Member. Used for ADA-CERP</description>
        <formula>OR( ISPICKVAL( Contact.Profession__c , &quot;Faculty/Instructor/Professor&quot;),ISPICKVAL( Contact.Profession__c , &quot;General Manager&quot;), ISPICKVAL( Contact.Profession__c , &quot;Implant Manager&quot;),ISPICKVAL( Contact.Profession__c , &quot;Lab Owner&quot;),ISPICKVAL( Contact.Profession__c , &quot;Owner&quot;),ISPICKVAL( Contact.Profession__c , &quot;Purchaser&quot;),ISPICKVAL( Contact.Profession__c , &quot;Registrar&quot;),ISPICKVAL( Contact.Profession__c , &quot;Sales Manager&quot;),ISPICKVAL(  Contact.Profession_D_CH__c  , &quot;General manager&quot;),ISPICKVAL( Contact.Profession__c , &quot;Implant Manager&quot;),ISPICKVAL( Contact.Profession__c , &quot;Lab Owner&quot;),ISPICKVAL( Contact.Profession__c , &quot;Purchaser&quot;),ISPICKVAL( Contact.Sub_Contact_Type__c , &quot;Faculty/Instructor/Professor&quot;),ISPICKVAL( Contact.Sub_Contact_Type__c , &quot;General Manager&quot;), ISPICKVAL( Contact.Sub_Contact_Type__c , &quot;Implant Manager&quot;),ISPICKVAL( Contact.Sub_Contact_Type__c , &quot;Lab Owner&quot;),ISPICKVAL( Contact.Sub_Contact_Type__c , &quot;Owner&quot;),ISPICKVAL( Contact.Sub_Contact_Type__c , &quot;Purchaser&quot;),ISPICKVAL( Contact.Sub_Contact_Type__c , &quot;Registrar&quot;),ISPICKVAL( Contact.Sub_Contact_Type__c , &quot;Sales Manager&quot;),ISPICKVAL(  Contact.Profession_D_CH__c  , &quot;General manager&quot;),ISPICKVAL( Contact.Sub_Contact_Type__c , &quot;Implant Manager&quot;),ISPICKVAL( Contact.Sub_Contact_Type__c , &quot;Lab Owner&quot;),ISPICKVAL( Contact.Sub_Contact_Type__c , &quot;Purchaser&quot;))</formula>
        <inlineHelpText>Checks if this Campaign Member is a Business Team Member. Used for ADA-CERP</inlineHelpText>
        <label>Business Team Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CampaignMemberOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>TFUS-000004287</description>
        <label>Campaign Member Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CampaignMemberStatus__c</fullName>
        <label>Campaign Member Status</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Eligibility__c</fullName>
        <formula>IF( Campaign.IsActive &lt;&gt; TRUE,&quot;NOT ELIGIBLE FOR OFFER&quot;,&quot;CURRENT CAMPAIGN ELIGIBLE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Eligibility</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_End_Date__c</fullName>
        <description>The End Date of the Campaign to which the Campaign Member belongs</description>
        <formula>Campaign.EndDate</formula>
        <inlineHelpText>The End Date of the Campaign to which the Campaign Member belongs</inlineHelpText>
        <label>Campaign End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaign_Member_E_mail__c</fullName>
        <label>Campaign Member E-mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Campaign_Member_HQ__c</fullName>
        <description>Always show a &quot;1&quot;. Used in reports (formulas) only and should now appear in any layouts</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Always show a &quot;1&quot;. Used in reports (formulas) only and should now appear in any layouts</inlineHelpText>
        <label>Campaign Member # (HQ)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaign_Status__c</fullName>
        <formula>TEXT(Campaign.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Contact.MailingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmation_letter_sent_out_BNL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A temporary solution for BNL to keep track of who has received a confirmation letter from Dentsply. A wish from BNL to manage this by member status in the future.</description>
        <inlineHelpText>Shows if a confirmation letter has been sent to the Campaign member.</inlineHelpText>
        <label>Confirmation letter sent out (BNL)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract (IT)</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2 AND (3 OR 4)</booleanFilter>
            <filterItems>
                <field>Contract.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>Contract.Status</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>Contract.Remaining_Value__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>Contract.Remaining_Value__c</field>
                <operation>notEqual</operation>
                <value>0</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_Code_3_digit__c</fullName>
        <formula>IF(ISBLANK(ContactId),TEXT(Lead.Country_Code_3_digit__c),TEXT(Contact.Country_Code_3_digit__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Code (3-digit)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Fee__c</fullName>
        <label>Course Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credits__c</fullName>
        <description>Displays the course credit used for displaying the credits earned by contact during a certain time period</description>
        <formula>Campaign.Credits__c</formula>
        <inlineHelpText>Displays the course credit used for displaying the credits earned by contact during a certain time period</inlineHelpText>
        <label>Credits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_ATL_Abut_Won_Lost_Status__c</fullName>
        <formula>Contact.Account.WonLostStatus_Abutments_EndField__c</formula>
        <label>Current ATL Abut Won/Lost Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_ATL_ISUS_Won_Lost_Status__c</fullName>
        <formula>Contact.Account.WonLostStatus_ISUS_EndField__c</formula>
        <label>Current ATL ISUS Won/Lost Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Account_Strategy_ATL_Abut__c</fullName>
        <description>This is the current Account Strategy</description>
        <formula>Contact.Account.Account_Strategy_ATL_Abut__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Account Strategy (ATL Abut)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Account_Strategy_ATL_ISUS__c</fullName>
        <description>This is the current Account Strategy Field</description>
        <formula>Contact.Account.Account_Strategy_ATL_ISUS__c</formula>
        <label>Current Account Strategy (ATL ISUS)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Account_Strategy_Implants__c</fullName>
        <formula>Contact.Account.Account_Strategy_Implants__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current 	 Account Strategy (Implants)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Account_Strategy_SIMPLANT__c</fullName>
        <formula>Contact.Account.Account_Strategy_Simplant__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current 	 Account Strategy (SIMPLANT)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Implants_Won_Lost_Status__c</fullName>
        <formula>Contact.Account.WonLostStatus_Implants_EndField__c</formula>
        <label>Current Implants Won/Lost Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_WonLostStatus_Simplant__c</fullName>
        <formula>IF(Contact.Account.WonLostStatus_Simplant__c=&quot;NULL&quot;,null,Contact.Account.WonLostStatus_Simplant__c)</formula>
        <label>Current WonLostStatus_Simplant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Visited_after_Campaign__c</fullName>
        <description>Update this formula to Last CFE date once that solution is implemented</description>
        <formula>IF(OR(
AND(INCLUDES(Campaign.SBU_Focus__c,&quot;Implants&quot;),Contact.Account.CFEs_Implants_Last_CFE_Date__c   &gt;=   Campaign.EndDate),
AND(INCLUDES(Campaign.SBU_Focus__c,&quot;Endodontics&quot;),Contact.Account.CFEs_Endodontics_Last_CFE_Date__c   &gt;=   Campaign.EndDate),
AND(INCLUDES(Campaign.SBU_Focus__c,&quot;Orthodontics&quot;),Contact.Account.CFEs_Orthodontics_Last_CFE_Date__c   &gt;=   Campaign.EndDate),
AND(INCLUDES(Campaign.SBU_Focus__c,&quot;Preventive&quot;),Contact.Account.CFEs_Preventive_Last_CFE_Date__c   &gt;=   Campaign.EndDate),
AND(INCLUDES(Campaign.SBU_Focus__c,&quot;Prosthetics&quot;),Contact.Account.CFEs_Prosthetics_Last_CFE_Date__c   &gt;=   Campaign.EndDate),
AND(INCLUDES(Campaign.SBU_Focus__c,&quot;Restorative&quot;),Contact.Account.CFEs_Restorative_Last_CFE_Date__c   &gt;=   Campaign.EndDate),
AND(INCLUDES(Campaign.SBU_Focus__c,&quot;CAD/CAM&quot;),Contact.Account.CFEs_CAD_CAM_Last_CFE_Date__c   &gt;=   Campaign.EndDate),
AND(INCLUDES(Campaign.SBU_Focus__c,&quot;Treatment Centers&quot;),Contact.Account.CFEs_Treatment_Centers_Last_CFE_Date__c   &gt;=   Campaign.EndDate),
AND(INCLUDES(Campaign.SBU_Focus__c,&quot;Imaging Systems&quot;),Contact.Account.CFEs_Imaging_Systems_Last_CFE_Date__c   &gt;=   Campaign.EndDate),
AND(INCLUDES(Campaign.SBU_Focus__c,&quot;Intruments&quot;),Contact.Account.CFEs_Instruments_Last_CFE_Date__c   &gt;=   Campaign.EndDate)
), TRUE, FALSE)</formula>
        <label>Customer Visited after Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>CIM_Account</value>
            </filterItems>
            <filterItems>
                <field>Account.OneAccount_Type__c</field>
                <operation>equals</operation>
                <value>Distributor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaign Members (Dealer)</relationshipLabel>
        <relationshipName>Campaign_Members3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dental_Assistant__c</fullName>
        <description>Checks if this Campaign Member is a Dental Assistant. Used for ADA-CERP</description>
        <formula>OR(ISPICKVAL( Contact.Profession__c, &quot;Dental Assistant&quot;), ISPICKVAL(Contact.Sub_Contact_Type__c,&quot;Dental Assistant&quot;))</formula>
        <inlineHelpText>Checks if this Campaign Member is a Dental Assistant. Used for ADA-CERP</inlineHelpText>
        <label>Dental Assistant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dentist__c</fullName>
        <description>Checks if this Campaign Member is a Dentist. Used for ADA-CERP</description>
        <formula>OR( ISPICKVAL( Contact.Profession__c , &quot;Orthodontist&quot;),ISPICKVAL( Contact.Profession__c , &quot;Denturist&quot;),ISPICKVAL( Contact.Profession__c , &quot;Endodontist&quot;),ISPICKVAL( Contact.Profession__c , &quot;General Dentist&quot;),ISPICKVAL( Contact.Profession__c , &quot;Implantologist&quot;),ISPICKVAL( Contact.Profession__c , &quot;Maxillofacial Surgeon&quot;),ISPICKVAL( Contact.Profession__c , &quot;Oral Surgeon&quot;),ISPICKVAL( Contact.Profession__c , &quot;Periodontist&quot;),ISPICKVAL( Contact.Profession__c , &quot;Prosthodontist&quot;),ISPICKVAL( Contact.Profession__c , &quot;Restorative Dentist&quot;),ISPICKVAL(  Contact.Profession_D_CH__c  , &quot;Implantologist&quot;),ISPICKVAL(  Contact.Profession_D_CH__c  , &quot;Maxillo-facial Surgeon&quot;),ISPICKVAL(  Contact.Profession_D_CH__c  , &quot;Oral Surgeon&quot;),ISPICKVAL(  Contact.Profession_D_CH__c  , &quot;Periodontist&quot;),ISPICKVAL(  Contact.Profession_D_CH__c  , &quot;Prosthodontist&quot;),ISPICKVAL(  Contact.Profession_D_CH__c  , &quot;Restorative Dentist&quot;),ISPICKVAL( Contact.Sub_Contact_Type__c , &quot;Orthodontist&quot;),ISPICKVAL( Contact.Sub_Contact_Type__c , &quot;Denturist&quot;),ISPICKVAL( Contact.Sub_Contact_Type__c , &quot;Endodontist&quot;),ISPICKVAL( Contact.Sub_Contact_Type__c , &quot;General Dentist&quot;),ISPICKVAL( Contact.Sub_Contact_Type__c , &quot;Implantologist&quot;),ISPICKVAL( Contact.Sub_Contact_Type__c , &quot;Maxillofacial Surgeon&quot;),ISPICKVAL( Contact.Sub_Contact_Type__c , &quot;Oral Surgeon&quot;),ISPICKVAL( Contact.Sub_Contact_Type__c , &quot;Periodontist&quot;),ISPICKVAL( Contact.Sub_Contact_Type__c , &quot;Prosthodontist&quot;),ISPICKVAL( Contact.Sub_Contact_Type__c , &quot;Restorative Dentist&quot;))</formula>
        <inlineHelpText>Checks if this Campaign Member is a Dentist. Used for ADA-CERP</inlineHelpText>
        <label>Dentist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Departure_Flight__c</fullName>
        <label>Departure Flight#</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Departure__c</fullName>
        <label>Departure</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Customer Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Discount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ETM2_Assigned_Users__c</fullName>
        <formula>Account__r.DC_ETM_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ETM2 Assigned Users</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Attribute_1__c</fullName>
        <formula>Contact.External_Identifier__r.Attribute_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External Attribute 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Attribute_2__c</fullName>
        <formula>Contact.External_Identifier__r.Attribute_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External Attribute 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Identifier__c</fullName>
        <description>External Attribute such as Practice ID, RPPS in France...etc</description>
        <formula>Contact.External_Identifier__r.External_ID__c</formula>
        <inlineHelpText>Beta</inlineHelpText>
        <label>External Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>IF( ISBLANK(TEXT(Contact.Salutation)), FirstName &amp; &quot; &quot; &amp; LastName , TEXT(Contact.Salutation)  &amp; &quot; &quot; &amp; FirstName &amp; &quot; &quot; &amp; LastName )</formula>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fully_Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable when participant has paid any fees in full</description>
        <inlineHelpText>Enable when participant has paid any fees in full</inlineHelpText>
        <label>Fully Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HQ_update_field_internal__c</fullName>
        <description>Used to update campaign member records to execute triggers etc</description>
        <label>HQ update field (internal)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hotel_Arrangement_Status__c</fullName>
        <label>Hotel Arrangement Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Yet Arranged</fullName>
                    <default>true</default>
                    <label>Not Yet Arranged</label>
                </value>
                <value>
                    <fullName>Arranged</fullName>
                </value>
                <value>
                    <fullName>No Accomodation Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hotel_Check_In__c</fullName>
        <label>Hotel Check-In</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hotel_Check_Out__c</fullName>
        <label>Hotel Check-Out</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hotel_Paid_by_Participant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this field is checked it means that the Participant pays the Hotel costs directly to the Hotel</description>
        <inlineHelpText>If this field is checked it means that the Participant pays the Hotel costs directly to the Hotel</inlineHelpText>
        <label>Hotel Paid by Participant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hotel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hotel</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Partner (DI)</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaign Members (Hotel)</relationshipLabel>
        <relationshipName>Campaign_Members1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hygenist__c</fullName>
        <description>Checks if this Campaign Member is a Hygienist. Used for ADA-CERP</description>
        <formula>OR( ISPICKVAL( Contact.Profession__c , &quot;Dental Hygienist&quot;),ISPICKVAL( Contact.Sub_Contact_Type__c , &quot;Hygienist&quot;))</formula>
        <inlineHelpText>Checks if this Campaign Member is a Hygienist. Used for ADA-CERP</inlineHelpText>
        <label>Hygenist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IDSContact__c</fullName>
        <externalId>true</externalId>
        <label>IDSContact</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Implant_Lost_Comparison__c</fullName>
        <description>The field checks the Implant Lost date of the Campaign and sets different  status &quot;lost before/after Campaign&quot;. Use in reports to check lost accounts. If the Account is not Lost the field is blank</description>
        <formula>IF( ISBLANK( Contact.Account.Lost_date_D__c ) , null,  IF(Contact.Account.Lost_date_D__c &lt;=  Campaign.EndDate , &quot;Lost Before Campaign&quot;, &quot;Lost After Campaign&quot;) )</formula>
        <inlineHelpText>The field checks the Implant Lost date of the Campaign and sets different  status &quot;lost before/after Campaign&quot;. Use in reports to check lost accounts. If the Account is not Lost the field is blank</inlineHelpText>
        <label>Implant Lost Comparison</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implant_Won_Comparison__c</fullName>
        <description>The field checks the Implant Won date of the Campaign and sets different  status &quot;won before/after Campaign&quot;. Use in reports to check won accounts. If the Account is not won the field is blank</description>
        <formula>IF(  ISNULL(Contact.Account.LastWonEventYearMonth_Implants__c), null,  IF(Contact.Account.LastWonEventYearMonth_Implants__c  &lt;=   Campaign.EndDate , &quot;Won Before Campaign&quot;, &quot;Won After Campaign&quot;) )</formula>
        <inlineHelpText>The field checks the Implant Won date of the Campaign and sets different  status &quot;won before/after Campaign&quot;. Use in reports to check won accounts. If the Account is not won the field is blank</inlineHelpText>
        <label>Implant Won Comparison</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implants_Won_Lost_Status__c</fullName>
        <label>Implants Won/Lost Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initiate_DNA_Call__c</fullName>
        <description>A field that will display a link to launch a flow that manage DNA Call Campaigns. The link will only be visible if the User has been assigned to call the Member.</description>
        <formula>HYPERLINK(&quot;/apex/DNA_Campaign_Flow?varInputMemberID=&quot;&amp;Id&amp;&quot;&amp;retURL=/apex/forceclose&quot;, &quot;Initiate Call&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Click link to initiate the call process.</inlineHelpText>
        <label>Initiate DNA Call</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initiative_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Initiative Account</label>
        <referenceTo>Field_Sales_Project_Members__c</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>